# xsdcpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  NOTICE  README.md  TODO.md  conanfile.py
src/: CMakeLists.txt  Generator.cpp  Generator.hpp  Main.cpp  Reader.cpp  Reader.hpp  XmlParser.cpp  XmlParser.hpp  Xsd.cpp  Xsd.hpp  xsd.hpp  xsdcpp.hpp
src/ResourceCompiler/: CMakeLists.txt  Main.cpp
test/: Attributes.xsd  CMakeLists.txt  Choice.xsd  Ecic_test.cpp  Ecoa_test.cpp  Example.xsd  Example_test.cpp  Features_test.cpp  Generator_test.cpp  Import.xsd  Occurrence.xsd  Parser_test.cpp  Reader_test.cpp  Recursion.xsd  SimpleTypeExtension.xsd  SubstitutionGroup.xsd  XmlParser_test.cpp  XsdLib_test.cpp  xsdcpp_XmlParser_test.cpp  xsdcpp_build_test.cpp  xsdcpp_parse_test.cpp
test/ecic/: CMakeLists.txt  Ecic_test.cpp
test/ecoa/: CMakeLists.txt  Milliways.impl.composite  ecoa-project-2.0.xsd
